css: address some dark mode issues

--- a/public/css/module.less
+++ b/public/css/module.less
@@ -104,10 +104,9 @@ table.common-table th {
     position: absolute;
     right: 0;
     display: none;
-    color: @text-color-inverted;
+    color: @menu-flyout-bg-color;
     background-color: @text-color;
-    border-radius: 0.1em;
-    border-top-left-radius: 0;
+    border: 1px solid @gray-light;
     box-shadow: 1em 1em 1em 0 rgba(0, 0, 0, 0.2);
 
     a {
@@ -137,11 +136,11 @@ table.common-table th {
     padding: 0.2em 0.5em;
   }
   > ul > li:hover {
-    background-color: @text-color;
+    background-color: @menu-flyout-bg-color;
     border-top-left-radius: 0.1em;
     border-top-right-radius: 0.1em;
     & > a {
-      color: @text-color-inverted;
+      color: @menu-flyout-color;
       text-decoration: none;
     }
   }
